<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonationForm">

    <fragment
        android:id="@+id/nav_host_fragment_activity_main2"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:itemTextColor="@color/Blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu"
        tools:layout_editor_absoluteY="68dp" />

    <TextView
        android:id="@+id/textFormTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/donation_form"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/Blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_view" />

    <TextView
        android:id="@+id/textFormDescription"
        android:layout_width="283dp"
        android:layout_height="35dp"
        android:text="@string/text_titleFormDescription"
        android:textAlignment="center"
        android:textColor="@color/Blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFormTitle" />

    <EditText
        android:id="@+id/inputNameOfItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/inputItemsName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textFormCategory"
        app:layout_constraintTop_toBottomOf="@+id/textFormDescription" />

    <EditText
        android:id="@+id/inputQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/quantity"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/inputNameOfItem" />

    <EditText
        android:id="@+id/inputFormPickupAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pickup_address"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/inputMultiLineNotes" />

    <EditText
        android:id="@+id/inputFormPhoneNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/inputPhone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/inputFormPickupAddress" />

    <EditText
        android:id="@+id/inputFormDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/inputDate"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/inputFormPhoneNum" />

    <Button
        android:id="@+id/buttonSubmitForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0D3B66"
        android:onClick="launchFormSummary"
        android:text="@string/submit_formButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputFormDate" />

    <TextView
        android:id="@+id/textFormCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/textCategory"
        android:textColor="@color/Blue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFormDescription" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFormCategory">


        <RadioButton
            android:id="@+id/radioButtonApparel"
            android:layout_width="97dp"
            android:layout_height="33dp"
            android:onClick="checkCategoryButton"
            android:text="@string/apparel"
            android:textColor="@color/Blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/radioButtonToys"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:onClick="checkCategoryButton"
            android:text="@string/CategoryTwo"
            android:textColor="@color/Blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.655"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/radioButtonToiletries"
            android:layout_width="96dp"
            android:layout_height="33dp"
            android:onClick="checkCategoryButton"
            android:text="@string/categoryThree"
            android:textColor="@color/Blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.949"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/radioButtonAnimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="checkCategoryButton"
            android:text="@string/categoryFour"
            android:textColor="@color/Blue" />


        <RadioButton
            android:id="@+id/radioButtonSchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="checkCategoryButton"
            android:text="@string/categoryFive"
            android:textColor="@color/Blue" />


        <RadioButton
            android:id="@+id/radioButtonTech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="checkCategoryButton"
            android:text="@string/categorySix"
            android:textColor="@color/Blue" />


        <RadioButton
            android:id="@+id/radioButtonOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="checkCategoryButton"
            android:text="@string/categorySeven"
            android:textColor="@color/Blue" />

    </RadioGroup>

    <EditText
        android:id="@+id/inputMultiLineNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/notes"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/inputQuantity" />


</androidx.constraintlayout.widget.ConstraintLayout>